# coz

./: .gitignore  API_README.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  SDK_USAGE.md  ZOOM_README.md  __init__.py  check_setup.py  client_example.py  coz_api_minimal.py  coz_flexible_service.py  coz_portable_service.py  coz_service_unified.py  coz_zoom_service.py  download_models.py  example_usage.py  inference_coz.py  osediff_sd3.py  pyproject.toml  requirements.txt  run_tests.py  serve.py  simple_upscale_client.py  test_coz_api.py  test_guide.md  upscale.py  zoom_api.py  zoom_client.py
.claude/: settings.local.json
lora/: lora_layers.py  lora_utils.py
ram/models/: utils.py
scripts/inference/: inference_coz_dapeprompt.sh  inference_coz_nullprompt.sh  inference_coz_vlmprompt.sh  inference_coz_vlmprompt_efficient.sh  inference_nearest.sh  inference_onestep.sh
